--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,7 @@
 
 %:
 	dh  $@
+
+# Workaround for missing dependency information in libmongoclient package
+override_dh_shlibdeps:
+	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
