--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,9 +1,9 @@
 CC= g++
-CFLAGS= -Wall -g -O2 -shared -fPIC -I/usr/include/mongo `pkg-config --cflags lua5.2` `pkg-config --cflags libmongo-client`
+CFLAGS= -Wall -fno-strict-aliasing -g -O2 -shared -fPIC -I/usr/include/mongo `pkg-config --cflags luajit` `pkg-config --cflags libmongo-client`
 AR= ar rcu
 RANLIB= ranlib
 RM= rm -f
-LIBS=`pkg-config --libs lua5.2` -lmongoclient -lssl -lboost_thread -lboost_filesystem -lrt
+LIBS=`pkg-config --libs luajit` -lmongoclient -lssl -lboost_thread -lboost_filesystem -lrt
 OUTLIB=mongo.so
 
 LDFLAGS= $(LIBS)
