--- a/Makefile.darwin
+++ b/Makefile.darwin
@@ -14,11 +14,11 @@ endif
 .PHONY:	checklib
 
 CC= g++
-CFLAGS= -Wall -g -O2 -fPIC `pkg-config --cflags "lua >= 5.2"` -I$(MONGO_INCLUDE_DIR)
+CFLAGS= -Wall -fno-strict-aliasing -g -O2 -fPIC `pkg-config --cflags "luajit >= 2.0.3"` -I$(MONGO_INCLUDE_DIR)
 AR= ar rcu
 RANLIB= ranlib
 RM= rm -f
-LIBS=`pkg-config --libs "lua >= 5.2"` -lmongoclient -lssl -lboost_thread-mt -lboost_filesystem-mt -flat_namespace -bundle -L$(MONGO_LIB_DIR) -rdynamic
+LIBS=`pkg-config --libs "luajit >= 2.0.3"` -lmongoclient -lssl -lboost_thread-mt -lboost_filesystem-mt -flat_namespace -bundle -L$(MONGO_LIB_DIR) -rdynamic
 OUTLIB=mongo.so
 
 LDFLAGS= $(LIBS)
