--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,9 +1,10 @@
 CC= g++
-CFLAGS= -Wall -fno-strict-aliasing -g -O2 -shared -fPIC -I/usr/include/mongo `pkg-config --cflags luajit` `pkg-config --cflags libmongo-client`
+LUAPKG:= $(shell ( luajit -e 'print("luajit")'  2> /dev/null ) || lua5.2 -e 'print("lua52")'  2> /dev/null || lua5.1 -e 'print("lua51")'  2> /dev/null || lua -e 'print("lua" .. string.match(_VERSION, "%d.%d"))'  2> /dev/null | cut -d' ' -f 2)
+CFLAGS= -Wall -g -O2 -shared -fPIC -I/usr/include/mongo `pkg-config --cflags $(LUAPKG)` `pkg-config --cflags libmongo-client`
 AR= ar rcu
 RANLIB= ranlib
 RM= rm -f
-LIBS=`pkg-config --libs luajit` -lmongoclient -lssl -lboost_thread -lboost_filesystem -lrt
+LIBS=`pkg-config --libs $(LUAPKG)` -lmongoclient -lssl -lboost_thread -lboost_filesystem -lrt
 OUTLIB=mongo.so
 
 LDFLAGS= $(LIBS)
