--- a/Makefile.darwin
+++ b/Makefile.darwin
@@ -14,8 +14,9 @@ endif
 .PHONY:	checklib
 
 CC= g++
-LUAPKG:= $(shell ( luajit -e 'print("luajit")'  2> /dev/null ) || lua5.2 -e 'print("lua52")'  2> /dev/null || lua5.1 -e 'print("lua51")'  2> /dev/null || lua -e 'print("lua" .. string.match(_VERSION, "%d.%d"))'  2> /dev/null | cut -d' ' -f 2)
-CFLAGS= -Wall -g -O2 -fPIC `pkg-config --cflags $(LUAPKG)` -I$(MONGO_INCLUDE_DIR)
+LUAPKG:= $(shell ( luajit -e 'print("luajit")'  2> /dev/null ) || lua5.2 -e 'print("lua5.2")'  2> /dev/null || lua5.1 -e 'print("lua5.1")'  2> /dev/null || lua -e 'print("lua" .. string.match(_VERSION, "%d+.%d+"))'  2> /dev/null)
+CFLAGS= -Wall -g -O2 -fPIC $LUAFLAGS -I$(MONGO_INCLUDE_DIR)
+
 AR= ar rcu
 RANLIB= ranlib
 RM= rm -f
